# GPT5brain

./: .gitignore  CHANGELOG.md  DEFICIENCY_DASHBOARD.md  FEATURE_MAP.md  Fresh_System.prd.md  IMPLEMENTATION_PLAN.md  README.md  dashboard.html  exec_broadcast.html  mission_1.html  pyproject.toml  temp_cli_before.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  self_optimization.yml
.github/workflows/: changelog.yml  nightly-optimize.yml  pr-labeler.yml  publish-pages.yml  require-labels.yml  smoke.yml  status-page.yml
docs/: index.html  status.md
gpt5/: __main__.py  config.py
gpt5/cli/: cli.py
gpt5/core/: agent.py  hooks.py  memory.py  orchestrator.py  tasks.py
gpt5/data/: memory.db
gpt5/math/: engine.py
gpt5/modules/: checklist.py  crawl.py  deficiency.py  feature_map.py  impl_plan.py  planning.py  prd.py  process_map.py  swarm.py  web.py  wisdom.py
gpt5/plugins/: encoding_sanitizer.py  json_vars_adapter.py  loader.py  net_retry.py
gpt5/tools/: changelog.py  gh_cli.py  git_ops.py  github_api.py  html_extract.py  markdown_extract.py  pathutil.py  report_html.py  reporting.py  snapshot.py  validators.py  verify.py  web_fetch.py
gpt5_local_jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: deficiency_dashboard.html  index.html  mission_2_execution.html  mission_3_execution.html  status.html
scripts/: optimize_now.ps1  schedule_optimize.ps1
